# src/main/java/pl/iodkovskaya/travel_allowance_calculation/logic/transport/model/entity/TransportCostEntity.java
@@ -26,7 +26,7 @@ public class TransportCostEntity {
 
     @NotNull(message = "inputtedDaysNumberForTransportCost cannot be null")
     @Column(nullable = false)
-    private Integer inputtedDaysNumberForTransportCost;
+    private Integer inputtedDaysNumberForUndocumentedTransportCost;
 
     @Column(nullable = false)
     private BigDecimal undocumentedLocalTransportCost;
@@ -67,13 +67,11 @@ public class TransportCostEntity {
     @Column(nullable = false)
     private BigDecimal transportCostAmount;
 
-    public TransportCostEntity(TravelEntity travelEntity, Integer inputtedDaysNumberForTransportCost, BigDecimal undocumentedLocalTransportCost,
-                               BigDecimal documentedLocalTransportCost, String meansOfTransport, BigDecimal costOfTravelByPublicTransport,
-                               Long kilometersByCarEngineUpTo900cc, Long kilometersByCarEngineAbove900cc, Long kilometersByMotorcycle,
-                               Long kilometersByMoped) {
+    public TransportCostEntity(TravelEntity travelEntity, Integer inputtedDaysNumberForUndocumentedTransportCost, BigDecimal documentedLocalTransportCost,
+                               String meansOfTransport, BigDecimal costOfTravelByPublicTransport, Long kilometersByCarEngineUpTo900cc,
+                               Long kilometersByCarEngineAbove900cc, Long kilometersByMotorcycle, Long kilometersByMoped) {
         this.travelEntity = travelEntity;
-        this.inputtedDaysNumberForTransportCost = inputtedDaysNumberForTransportCost;
-        this.undocumentedLocalTransportCost = undocumentedLocalTransportCost;
+        this.inputtedDaysNumberForUndocumentedTransportCost = inputtedDaysNumberForUndocumentedTransportCost;
         this.documentedLocalTransportCost = documentedLocalTransportCost;
         this.meansOfTransport = meansOfTransport;
         this.costOfTravelByPublicTransport = costOfTravelByPublicTransport;
@@ -84,10 +82,6 @@ public class TransportCostEntity {
     }
 
     public void updateUndocumentedLocalTransportCost(BigDecimal undocumentedLocalTransportCost) {
-        this.undocumentedLocalTransportCost = undocumentedLocalTransportCost;
-    }
-
-    public void updateDocumentedLocalTransportCost(BigDecimal undocumentedLocalTransportCost) {
         this.undocumentedLocalTransportCost = undocumentedLocalTransportCost;
     }
 
@@ -102,5 +96,4 @@ public class TransportCostEntity {
     public void updateTransportCostAmount(BigDecimal transportCostAmount) {
         this.transportCostAmount = transportCostAmount;
     }
-
 }
