# src/main/java/pl/iodkovskaya/travel_allowance_calculation/logic/travel/model/dto/TravelRequestDto.java
@@ -21,7 +21,7 @@ import java.time.LocalTime;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class TravelRequestDto {
     @NotNull(message = "Pessel cannot be null")
-    @Min(value = 11, message = "Pessel cannot be negative")
+    @Size(min = 11, max = 11, message = "Pesel must be exactly 11 characters")
     private Long pesel;
 
     @NotBlank(message = "From city cannot be blank")
@@ -47,13 +47,16 @@ public class TravelRequestDto {
     @NotNull(message = "Advance payment cannot be null")
     private BigDecimal advancePayment;
 
+    @NotNull(message = "Other expenses cannot be null")
+    private BigDecimal otherExpenses;
+
     @NotNull(message = "DietDto cannot be null")
     private DietDto dietDto;
 
     @NotNull(message = "OvernightStayDto cannot be null")
     private OvernightStayDto overnightStayDto;
 
-    @NotNull(message = "Transport cannot be null")
+    @NotNull(message = "TransportCostDto cannot be null")
     private TransportCostDto transportCostDto;
 
 }
